<resources>
    <string name="app_name" translatable="false">Mom&amp;Baby</string>
    <string name="birthday">Дата рождения</string>
    <string name="girl">Девочка</string>
    <string name="boy">Мальчик</string>
    <string name="girl_eng" translatable="false">girl</string>
    <string name="boy_eng" translatable="false">boy</string>
    <string name="name">Имя</string>
    <string name="enter_the_data">Введите данные ребенка</string>
    <string name="next">Продолжить</string>
    <string name="login">Войти</string>
    <string name="dont_have_account">Еще нет аккаунта? Зарегистрируйтесь</string>
    <string name="password">Пароль</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="already_registered">Уже регистрировались? Войти</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="unpredicted_error">Упс… Произошла ошибка, попробуйте повторить попытку</string>
    <string name="wrong_password">Введен неверный пароль</string>
    <string name="enter_email_and_password">Требуется ввести email и пароль для входа в аккаунт</string>
    <string name="internet">Для работы приложения требуется наличие соединения с интернетом!</string>
    <string name="invalid_email">Требуется ввести корректный email</string>
    <string name="invalid_password">Требуется ввести корректный пароль, длина которого не менее 6</string>
    <string name="invalid_name">Требуется ввести корректное имя</string>
    <string name="wrong_password_or_login">Введен неверный логин или пароль</string>
    <string name="password_again">Введите пароль еще раз</string>
    <string name="different_passwords">Пароли должны совпадать</string>
    <string name="email_already_used">Данный email уже используется</string>
    <string name="mom_health">Аналитика данных здоровья мамы</string>
    <string name="baby_health">Аналитика данных здоровья ребенка</string>
    <string name="today">Сегодняшняя активность</string>
    <string name="yesterday">Назад</string>
    <string name="tomorrow">Вперед</string>
    <string name="charts">Графики</string>
    <string name="exit">Выйти из аккаунта</string>
    <string name="app_info">О приложении</string>
    <string name="contact_developer">Связаться с разработчиком</string>
    <string name="my_email" translatable="false">repina.developer@gmail.com</string>
    <string name="send_report_mom">Отправить отчет о здоровье мамы на почту</string>
    <string name="send_report_baby">Отправить отчет о здоровье малыша на почту</string>
    <string name="app_description">Приложение разработано Репиной А.А. в рамках выполнения выпускной квалификационной работы и предназначено для мониторинга здоровья малыша до 1 года и помощи его маме. Научный руководитель Ахметсафина Р.З. Комментарии, пожелания и предложения привествуются!</string>
    <string name="licenses">Все изображения в приложении используются по Flaticon Basic License. Изображения являются частью пакетов, созданных Freepik, Smashicons, Nikita Golubev, Vectors Market, Maxim Basinski, Scott de Jonge, Eucalyp</string>
    <string name="add_new_data">Введите новое значение %1$s</string>
    <string name="height">роста малыша</string>
    <string name="weight">веса малыша</string>
    <string name="rateValue">Оцените %1$s</string>
    <string name="diapers"> стул малыша</string>
    <string name="food">, как малыш покушал</string>
    <string name="choose_date">Выберите дату</string>
    <string name="temperature"> температуры</string>
    <string name="add_symptomes">Укажите название и симптомы</string>
    <string name="add_pills">Укажите лекарства</string>
    <string name="outdoor_duration">продолжительности прогулки</string>
    <string name="sleep_duration">продолжительности сна</string>
    <string name="add_vaccination">Введите описание реакции малыша на прививку</string>
    <string name="vaccination">Выберите прививку из списка</string>
    <string name="add">Добавить</string>
    <string name="сomment">Комментарий</string>
    <string name="rate_feature">Оценка:</string>
    <string name="sympthomes">Название и симптомы:</string>
    <string name="pills">Лекарства:</string>
    <string name="temperature_value">Температура:</string>
    <string name="height_value">Рост:</string>
    <string name="weight_value">Вес:</string>
    <string name="outdoor">Длительность прогулки:</string>
    <string name="sleep">Длительность сна:</string>
    <string name="height_word">Рост</string>
    <string name="weight_word">Вес</string>
    <string name="vaccination_name">Название прививки:</string>
    <string name="happy_birthday">С днем рождения, </string>
    <string name="mr">дорогой</string>
    <string name="mrs">дорогая</string>
    <string name="choose_period">Выберите период для отчета</string>
    <string name="for_day">За день</string>
    <string name="for_week">За неделю</string>
    <string name="for_month">За месяц</string>
    <string name="report_from">Отчет с</string>
    <string name="report_to">по</string>
    <string name="email_text"><![CDATA[Высылаем отчет о здоровье. Спасибо, что пользуетесь Mom&Baby!]]></string>
    <string name="report_sending">Отправка отчета...</string>
    <string name="reports">Отчеты</string>
    <string name="report_error">Возникла проблема при создании отчета, проверьте наличие SD карты в вашем устройстве</string>
    <string name="no_data">Нет доступных данных. Попробуйте выбрать другой временной период.</string>
    <string name="no_data_today">Записей нет. Вы можете добавить их, нажав кнопку плюс внизу этой вкладки</string>
    <string name="need_to_sync">Требуется синхронизировать носимое устройство с Google Fit, чтобы данные появились в приложении. Нажмите кнопку Google Fit внизу экрана на вкладке мамы для входа в систему и загрузки данных</string>
    <string name="google_fit_notification">Для корректной работы требуется разрешить доступ к Google Fit и войти в свой аккаунт</string>
    <string name="google_fit" translatable="false">Google Fit</string>
    <string name="google_fit_no_data">Данные недоступны</string>
    <string-array name="vaccinations">
        <item>Коклюш</item>
        <item>Столбняк</item>
        <item>Туберкулез</item>
        <item>Полиомиелит</item>
        <item>Гемофильная инфекция</item>
        <item>Вирусный гепатит В</item>
        <item>Дифтерия</item>
        <item>Эпидемический паротит</item>
        <item>Краснуха</item>
        <item>Корь</item>
    </string-array>
    <string name="vaccinations_list">Список прививок</string>
    <string name="vaccinations_info">О прививках</string>
    <string name="ideal_height">Средний рост</string>
    <string name="ideal_weight">Средний вес</string>
    <string name="min_height">Минимальный рост</string>
    <string name="min_weight">Минимальный вес</string>
    <string name="max_height">Максимальный рост</string>
    <string name="max_weight">Максимальный вес</string>
    <string name="no_data_chart">Нет данных</string>
    <string name="fit_data_load">Идет загрузка данных. Пожалуйста, подождите!</string>
    <string name="height_legend">Данные роста</string>
    <string name="weight_legend">Данные веса</string>
    <string name="food_legend">Оценка питания</string>
    <string name="illness_legend">Температура</string>
    <string name="outdoor_legend">Часы прогулки</string>
    <string name="sleep_legend">Часы сна</string>
    <string name="stool_legend">Оценка стула</string>
    <string name="add_new_other">Введите информацию о событии/планах</string>
    <string name="for_custom">Выбрать период</string>
    <string name="from">С</string>
    <string name="to">По</string>
    <string name="ok">OK</string>
    <string name="incorrect_dates">Неверно выбран диапазон дат. Попробуйте еще раз!</string>
    <string name="data_load_stop">Загрузка данных была прервана</string>
    <string name="up_teeth">Верхняя челюсть</string>
    <string name="down_teeth">Нижняя челюсть</string>
    <string name="press_teeth">Нажмите на зуб, который прорезался у вашего малыша</string>
    <string name="add_any_data">Сначала добавьте какие-то данные, чтобы их сохранить</string>
    <string name="teeth">Зубы</string>
    <string name="teeth_map">Это карта зубов вашего малыша</string>
    <string name="delete">Удалить</string>
    <string name="sleep_str">Сон:</string>
    <string name="hours_str">часа(ов)</string>
    <string name="new_teeth">У малыша прорезался зуб!</string>
    <string name="russian" translatable="false">русский</string>
    <string name="baby_has">У Вашего малыша уже есть зубы:</string>
    <string name="month">месяца</string>
    <string name="bad_imt">Индекс массы тела Вашего малыша не соотвествует норме, следует обратиться к специалисту</string>
    <string name="no_google_fit_data">Google Fit не синхронизирован с носимыми устройствами, поэтому данные отсутствуют</string>
    <string name="calendar_export">Синхронизация с Google календарем</string>
    <string name="feeding_time">Сроки прикорма</string>
    <string-array name="parametersBaby">
        <item>Рост</item>
        <item>Вес</item>
        <item>Стул</item>
        <item>Прививки</item>
        <item>Болезни</item>
        <item>Питание</item>
        <item>Прогулки</item>
        <item>Сон</item>
        <item>Другое/Планы</item>
        <item>Зубы</item>
    </string-array>
    <string-array name="parametersMom">
        <item>Шаги</item>
        <item>Сон</item>
        <item>Вес</item>
        <item>Калории</item>
    </string-array>
    <string-array name="vaccinationsDates">
        <item>1 день\t\t\t\tI-Вирусный гепатит В</item>
        <item>1 неделя\t\t\tТуберкулез</item>
        <item>1 месяц\t\t\tII-Вирусный гепатит В</item>
        <item>3 месяца\t\tI-Коклюш, столбняк, дифтерия</item>
        <item>\t\t\t\t\t\t\t\tI-полиомиелит</item>
        <item>\t\t\t\t\t\t\t\tI-гемофильная инфекция</item>
        <item>5 месяцев\t\tII-Коклюш, столбняк, дифтерия</item>
        <item>\t\t\t\t\t\t\t\tII-полиомиелит</item>
        <item>\t\t\t\t\t\t\t\tII-гемофильная инфекция</item>
        <item>6 месяцев\t\tIII-Коклюш, столбняк, дифтерия</item>
        <item>\t\t\t\t\t\t\t\tIII-полиомиелит</item>
        <item>\t\t\t\t\t\t\t\tIII-гемофильная инфекция</item>
        <item>\t\t\t\t\t\t\t\tIII-Вирусный гепатит В</item>
        <item>год\t\t\t\t\t\tПаротит, краснуха, корь</item>
    </string-array>
    <string-array name="heightBoyNorm">
        <item>49.9</item>
        <item>54.7</item>
        <item>58.4</item>
        <item>61.4</item>
        <item>63.9</item>
        <item>65.9</item>
        <item>67.6</item>
        <item>69.2</item>
        <item>70.6</item>
        <item>72.0</item>
        <item>73.3</item>
        <item>74.5</item>
        <item>75.7</item>
    </string-array>
    <string-array name="heightGirlNorm">
        <item>49.1</item>
        <item>53.7</item>
        <item>57.1</item>
        <item>59.8</item>
        <item>62.1</item>
        <item>64.0</item>
        <item>65.7</item>
        <item>67.3</item>
        <item>68.7</item>
        <item>70.1</item>
        <item>71.5</item>
        <item>72.8</item>
        <item>74.0</item>
    </string-array>
    <string-array name="heightBoyMin">
        <item>48.0</item>
        <item>52.8</item>
        <item>56.4</item>
        <item>59.4</item>
        <item>61.8</item>
        <item>63.8</item>
        <item>65.5</item>
        <item>67.0</item>
        <item>68.4</item>
        <item>69.7</item>
        <item>71.0</item>
        <item>72.2</item>
        <item>73.4</item>
    </string-array>
    <string-array name="heightGirlMin">
        <item>47.3</item>
        <item>51.7</item>
        <item>55.0</item>
        <item>57.7</item>
        <item>59.9</item>
        <item>61.8</item>
        <item>63.5</item>
        <item>65.0</item>
        <item>66.4</item>
        <item>67.7</item>
        <item>69.0</item>
        <item>70.3</item>
        <item>71.4</item>
    </string-array>
</resources>