<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <Button
        android:id="@+id/appInfo"
        android:layout_marginTop="@dimen/main_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/app_info" />

    <Button
        android:id="@+id/send_report_mom"
        android:layout_below="@+id/appInfo"
        android:layout_marginTop="@dimen/main_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/send_report_mom" />

    <Button
        android:id="@+id/send_report_baby"
        android:layout_below="@+id/send_report_mom"
        android:layout_marginTop="@dimen/main_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/send_report_baby" />

    <Button
        android:id="@+id/feedback"
        android:layout_below="@+id/send_report_baby"
        android:layout_marginTop="@dimen/main_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/contact_developer" />

    <Button
        android:id="@+id/rate"
        android:layout_below="@+id/feedback"
        android:layout_marginTop="@dimen/main_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/rate_us" />


    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/main_margin"
        android:background="@color/colorPrimaryDark"
        android:text="@string/exit" />
</RelativeLayout>