<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/babyToday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/cardview_margin"
        android:layout_marginEnd="@dimen/cardview_margin"
        android:layout_marginStart="@dimen/cardview_margin"
        android:layout_marginTop="@dimen/cardview_margin"
        android:layout_weight="1"
        card_view:cardBackgroundColor="@color/colorAccent"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:cardElevation="@dimen/card_elevation">

        <TextView
            android:layout_marginTop="@dimen/main_margin"
            android:id="@+id/headerBaby"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_textview_header_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/main_margin"
            android:text="@string/today"
            android:textAlignment="center"
            android:textColor="@color/colorTextDark" />

        <ListView
            android:id="@+id/listViewBaby"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="13dp"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/link_card_height"
        android:layout_marginBottom="@dimen/card_bottom_margin"
        android:layout_marginEnd="@dimen/cardview_margin"
        android:layout_marginStart="@dimen/cardview_margin"
        android:layout_marginTop="@dimen/cardview_margin"
        card_view:cardBackgroundColor="@color/colorPrimaryDark"
        card_view:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/yesterdayBaby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorText"
                android:text="@string/yesterday"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tomorrowBaby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorText"
                android:text="@string/tomorrow"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>

    </android.support.v7.widget.CardView>


</TableLayout>